tests/paczka2/big_fuzzy/58845549.err
Error in line 3: yEG A585 97,7
Error in line 4: yEG S470 55,5
Error in line 7: eGY4 S470 48,9
Error in line 8: eGY4 S187 43,1
Error in line 9: HpHYe6 S187 69,9
Error in line 10: eGY4 S837 52,2
Error in line 15: eGY4 S470 22,4
Error in line 17: yEG S187 25,+
Error in line 16: eGY4 A585 43,1
Error in line 19: KbZyNs S837 26,1
Error in line 24: euOoNL A585 84,6
Error in line 48: yEG S187 65,6
Error in line 36: WMkihzCma6F A585 6,0
Error in line 53: WMkihzCma6F S470 57,9
Error in line 59: eGY4 S837 16,08
Error in line 62: KbZyNs S470 130,2
Error in line 58: WMkihzCma6F S837 38,5
Error in line 55: eGY4 A585 78,5
Error in line 82: HpHYe6 S470 67,7
Error in line 85: HpHYe6 S837 17,1
Error in line 97: KbZyNs A585 11,8
Error in line 100: yEG A585 52,4
Error in line 102: yEG S837 62,5
Error in line 78: eGY4 S837 5,0
Error in line 112: KbZyNs S187 42,2
Error in line 134: eGY4 S470 70,1
Error in line 133: euOoNL S470 9,2
Error in line 125: HpHYe6 S470 48,6
Error in line 144: eGY4 A585 -1,8
Error in line 143: HpHYe6 A585 53,1
Error in line 131: S187 S470 66,5
Error in line 149: yEG S837 62,1
Error in line 146: KbZyNs S837 4,5
Error in line 150: S187 A585 92,7
Error in line 169: euOoNL A585 93,93
Error in line 161: KbZyNs S187 132,7
Error in line 171: KbZyNs A585 60,4
Error in line 173: KbZyNs S470 31,7
Error in line 175: KbZyNs S187 27,5
Error in line 168: HpHYe6 S470 65,7
Error in line 170: euOoNL S470 7,5
Error in line 185: HpHYe6 A585 77,55
Error in line 179: HpHYe6 S187 71,3
Error in line 135: eGY4 A585 20,9
Error in line 200: HpHYe6 S837 65,87
Error in line 195: WMkihzCma6F S187 74,1
Error in line 190: HpHYe6 A585 23,9
Error in line 204: HpHYe6 S470 32,4
Error in line 206: HpHYe6 A585 29,7
Error in line 209: KbZyNs S470 25,8
Error in line 215: euOoNL S470 69,0
Error in line 217: euOoNL A585 94,4
Error in line 218: euOoNL S187 99,4
Error in line 227: WMkihzCma6F S470 122,7
Error in line 231: euOoNL S837 72,9
Error in line 232: WMkihzCma6F S837 0,3
